# eoa_image_compression

./: .gitignore  CMakeLists.txt  README.md
config/: classic_ea_config.yaml  classic_ea_hill_climber_init_config.yaml  differential_evolution_config.yaml  hill_climber_config.yaml  interleaved_ea_config.yaml  steady_state_ea_config.yaml
scripts/: draw_plot.py  roi_cover_test.m
src/: compress.cpp
src/algorithms/: ClassicEA.cpp  ClassicEA.h  DifferentialCrossover.cpp  DifferentialCrossover.h  DifferentialEvolution.cpp  DifferentialEvolution.h  HillClimber.cpp  HillClimber.h  InterleavedEA.cpp  InterleavedEA.h  Mutator.cpp  Mutator.h  SteadyStateEA.cpp  SteadyStateEA.h
src/algorithms/entities/: HillClimberPool.cpp  HillClimberPool.h  Mutator.cpp  Mutator.h  NewChromozomePool.cpp  NewChromozomePool.h  OnePointCrossover.cpp  OnePointCrossover.h  Stats.cpp  Stats.h
src/components/: Chromozome.cpp  Chromozome.h  Config.cpp  Config.h  IVisitor.h  RGen.cpp  RGen.h  Renderer.cpp  Renderer.h  definitions.h  target.h  utils.cpp  utils.h
src/components/fitness/: Fitness.h
src/components/fitness/cpu/: CPUFitness.cpp  CPUFitness.h  Renderer.cpp  Renderer.h
src/components/fitness/gpu/: GPUFitness.cu  GPUFitness.h  check_error.cu  check_error.h  kernels.cu  kernels.h  settings.h
src/shapes/: Circle.cpp  Circle.h  IShape.cpp  IShape.h  Rectangle.cpp  Rectangle.h
